<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.Settings">


    <TextView
        android:id="@+id/health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:text="@string/status"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/text_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="120dp"
        android:text="@string/disconnected"
        android:textSize="15sp"
        />

    <Button
        android:id="@+id/button_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="120dp"
        android:text="@string/connect"/>

    <TextView
        android:id="@+id/text_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:text="@string/battery"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/text_battery_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="120dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="120dp"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/text_calibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="260dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:text="@string/calibrate"
        android:textSize="15sp"
        />

    <Button
        android:id="@+id/button_calibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="120dp"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="250dp"
        android:text="@string/calibrate" />

    <TextView
        android:id="@+id/text_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="340dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="40dp"
        android:text="@string/daily_step_goal"
        android:textSize="15sp"
        />

    <Spinner
        android:id="@+id/spinner_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="340dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="160dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="160dp"/>


</RelativeLayout>