<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.Health">

    <TextView
        android:id="@+id/health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:text="@string/health"
        android:textAllCaps="true"
        android:textSize="20sp" />

    <lecho.lib.hellocharts.view.PieChartView
        android:id="@+id/steps_piechart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_width="200dp"
        android:layout_height="200dp" />

    <Button
        android:id="@+id/steps_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180dp"
        android:text="@string/steps"/>


    <Button
        android:id="@+id/concentration_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="320dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:text="@string/concentration"/>

    <lecho.lib.hellocharts.view.LineChartView
        android:id="@+id/concentration_linechart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:layout_width="380dp"
        android:layout_height="100dp"/>

    <Button
        android:id="@+id/blinks_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="470dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:text="@string/blinks"/>

    <lecho.lib.hellocharts.view.LineChartView
        android:id="@+id/blinks_linechart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:layout_width="380dp"
        android:layout_height="100dp"/>

</RelativeLayout>